# zed-codex-ACP-CAS

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README.ru.md  install.sh
.github/releases/: v0.23.5.md  v0.25.6.md  v0.27.0.md  v0.27.1.md
.github/workflows/: ci.yml  release.yml
docs/: thread-feature-map.graph.json  thread-feature-map.graph.mmd  thread-feature-map.markmap.md  thread-feature-map.md  upstream-feature-matrix.md
docs/drafts/: dynamic-tool-call-backup.md  soft-new-backup.md
examples/display-maps/: bars.jsonc  block.jsonc  context-braille.jsonc  context-percent.jsonc  text.jsonc
npm/: README.md  package.json
npm/publish/: update-base-package.sh
npm/template/: package.json
npm/testing/: validate.sh
script/: build_install_cas.sh  build_local_release.sh  clean_dev_acp_log.py  export_public_snapshot.sh  export_thread_feature_map.py  prepare_release.sh  run_live_checks.sh  smoke_test_cas.sh  update_references.sh
src/: adapter_home.rs  app_server.rs  codex_agent.rs  lib.rs  main.rs  prompt_args.rs  startup_diagnostics.rs  thread.rs
src/app_server/: reader.rs  request_policy.rs
src/thread/: protocol_contract.rs  turn_state.rs
src/thread/core/: inner_state.rs  item_handlers.rs  protocol_contract.rs  replay.rs  server_requests.rs  terminal_updates.rs  tests.rs  unified_diff.rs
src/thread/core/tests/: approvals.rs  collab.rs  diffs.rs  plan.rs  session_config.rs  slash_commands.rs  tool_call_ui.rs
src/thread/features/: dynamic_tool_call.rs  mod.rs  status_mapping.rs
src/thread/features/approvals/: command.rs  file_change.rs  mod.rs  permissions.rs  user_input.rs
src/thread/features/collab/: content.rs  mod.rs  render.rs  status.rs
src/thread/features/file/: changes.rs  events.rs  mod.rs
src/thread/features/notification/: mod.rs
src/thread/features/notification/events/: deltas.rs  mod.rs  reconnect.rs  turn.rs  usage.rs  warnings.rs
src/thread/features/plan/: events.rs  fallback.rs  mod.rs  parse.rs
src/thread/features/resume/: apply.rs  common.rs  listing.rs  mod.rs  selector.rs
src/thread/features/session/: controls.rs  diff.rs  events.rs  mod.rs  modes.rs  review.rs  thread_switch.rs
src/thread/features/tool_call_ui/: content.rs  kind.rs  location.rs  mod.rs  raw.rs  title.rs
src/thread/features/tool_events/: command.rs  dynamic.rs  mcp.rs  mod.rs  web_image.rs
src/thread/notification/: dispatch.rs
src/thread/prompt/: commands.rs  flow.rs  prompt_for_init_command.md
src/thread/session/: client.rs  display_maps.rs  lifecycle.rs  selector_preferences.rs  settings.rs  usage_cache.rs  view.rs
src/thread/session/config/: context.rs  fast_mode.rs  layout.rs  limits.rs  mod.rs  model_selector.rs  modes.rs  reasoning.rs
src/thread/session/config/context/: mcp.rs  plugins.rs  skills.rs
src/thread/session/display_maps/: jsonc.rs
src/thread/session/selector_preferences/: jsonc.rs  materialize.rs
src/thread/turn/: diff.rs  execution.rs  notify.rs  state.rs
