[package]
name = "codex-acp"
version = "0.3.0"
edition = "2024"
authors = ["Qweasd123tg"]
license = "Apache-2.0"
description = "A practical Codex ACP adapter fork for Zed and other ACP-compatible clients"
repository = "https://github.com/Qweasd123tg/zed-codex-ACP-CAS"
homepage = "https://github.com/Qweasd123tg/zed-codex-ACP-CAS"

[[bin]]
name = "codex-acp"
path = "src/main.rs"

[lib]
name = "codex_acp"
path = "src/lib.rs"

[dependencies]
agent-client-protocol = { version = "=0.9.4", features = ["unstable"] }
anyhow = "1"
async-trait = "0.1"
clap = "4"
codex-apply-patch = { git = "https://github.com/zed-industries/codex", rev = "ab7a5b87a9e455235f65637f1675c03051481c87" }
codex-app-server-protocol = { git = "https://github.com/zed-industries/codex", rev = "ab7a5b87a9e455235f65637f1675c03051481c87" }
codex-arg0 = { git = "https://github.com/zed-industries/codex", rev = "ab7a5b87a9e455235f65637f1675c03051481c87" }
codex-core = { git = "https://github.com/zed-industries/codex", rev = "ab7a5b87a9e455235f65637f1675c03051481c87" }
codex-mcp-server = { git = "https://github.com/zed-industries/codex", rev = "ab7a5b87a9e455235f65637f1675c03051481c87" }
codex-protocol = { git = "https://github.com/zed-industries/codex", rev = "ab7a5b87a9e455235f65637f1675c03051481c87" }
codex-login = { git = "https://github.com/zed-industries/codex", rev = "ab7a5b87a9e455235f65637f1675c03051481c87" }
codex-utils-approval-presets = { git = "https://github.com/zed-industries/codex", rev = "ab7a5b87a9e455235f65637f1675c03051481c87" }
codex-utils-cli = { git = "https://github.com/zed-industries/codex", rev = "ab7a5b87a9e455235f65637f1675c03051481c87" }
itertools = "0.14.0"
regex-lite = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
heck = "0.5.0"
unicode-segmentation = "1.11.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
codex-core = { git = "https://github.com/zed-industries/codex", rev = "ab7a5b87a9e455235f65637f1675c03051481c87" }

[package.metadata.deb]
maintainer = "Qweasd123tg"
copyright = "2026, Qweasd123tg"
section = "utils"
priority = "optional"
depends = "$auto"
extended-description = """\
Codex ACP CAS is a practical fork of the Zed Codex ACP adapter.
It connects Codex to ACP-compatible clients such as Zed through codex app-server.
"""
assets = [
  ["target/release/codex-acp", "usr/bin/codex-acp", "755"],
  ["README.md", "usr/share/doc/codex-acp/README.md", "644"],
  ["LICENSE", "usr/share/doc/codex-acp/LICENSE", "644"],
]

[package.metadata.generate-rpm]
summary = "A practical Codex ACP adapter fork for Zed and other ACP-compatible clients"
release = "1"
assets = [
  { source = "target/release/codex-acp", dest = "/usr/bin/codex-acp", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/codex-acp/README.md", mode = "644", doc = true },
  { source = "LICENSE", dest = "/usr/share/licenses/codex-acp/LICENSE", mode = "644", doc = true },
]

[lints.rust]
let-underscore = "warn"
rust-2018-idioms = "warn"
unused = "warn"

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
